Rewrite configuration system using bungee config lib